30) Use SNAT per default instead masquerade. This is more speed and decrease cpu load (to disable set use_snat=0).<br>
31) Add NAT loopback support.<br>
32) Fix DMZ<=>VPN conflicts.<br>
33) usb_modeswitch up to 1.1.8 version.<br>
34) HSO Backport some fixes and ID supported devices from upstream.<br>
35) Fix TC HTB hanging.<br>
36) Backport fixes for vfs/ext2/ext3/fuse from upstream (critical fixes and speedup).<br>
37) Transmission update 2.23 version.<br>
38) scsi subsystem backport fix errors and optimizations from vanilla kernel.<br>
39) Fix kernel extension logic.<br>
40) Add coldplug logic for init mdev event at boot time.<br>
41) Update toolchain to 4.5.3 gcc version and 2.21 binutils version.<br>
42) Now set gpio default for NEW WR Acorp product by default.<br>
43) Update libntfs-3 and ntfs-3 fuse driver/utils.<br>
44) Add parprouted to build tree. Need for transparent LAN/WiFi segment agregation(parproutedEnabled=0/1).<br>
45) HSO driver up to 1.14-Option version. (backported from new kernel verion).<br>
46) Backport fixes usb from new ralink sdk.<br>
47) Add hack in xl2tp and fix config in l2tp_helper for support new beeline l2tp logic.<br>
48) Iptables not need drop all icmp in vpn mode (fix ping frome wan in some situations).<br>
49) Add hotplug logic for flash/hdd/modems support.<br>
50) Remove dev_fs dead code from ralink drivers and others kernel subsystem/toolchain/boot.<br>
51) Increase priority for pppd and xl2tpd for prevent disconnect at high cpu load.<br>
52) Workaround to work IMQ and correct Mark with HW_NAT or Software Fastpath enable by default.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>